# snippets

./: .gitignore  README.md
anlambert/: anlambert_utils.py  compute_osdn_cvs_origin_urls.py  diff_swh_revisions.py  dump_all_origin_urls_from_graph_dataset.py  extract_origins_urls_from_sentry_issue.py  find_hg_checkout_extids_to_remove.py  generate_csv_scheduler_tasks_from_sentry_issue.py  graph-object-size-grpc.py  keycloak_count_users.py  list_archlinux_upstream_sources.py  list_aur_upstream_sources.py  pserver-anonymous-cvs.osdn.net-cvsroot-all-from-projects-all-scm.txt  requirements.txt  save_sourceware_cvs_origins.py  sourceware_cvs_origins
ardumont/: archive-completed-oneshot-and-disabled-recurring.sh  check_for_dump_clash.py  dispatch.py  filter_googlecode_repository.py  filter_path_clashes.py  from-output-to-csv.py  graph_bar.py  group_by_exception.py  kibana_fetch_logs.py  list-gh-repos-per-user.py  list-nomos-licenses  list-origin-per-error.py  list-svndump-urls  list-svndump-urls.py  load_gitorious.py  load_googlecode.py  read_from_archive.py  recompute.py  reschedule_errors.py  schedule_csv_partition.py  schedule_csv_range.py  schedule_with_queue_length_check.py  send-batch-sha1s.sh  sort_by_size.py  sync-mirror-to-github.sh
ardumont/grafana/: grafana-set-tags.py  grafana.py  pyproject.toml
azure/: create-account.sh
bchauvet/: .gitignore  2023_Roadmap.xls  draft.py  generate_roadmap_doc.py  hiring.py  import.py  roadmap_xls_to_gitlab.py  rollback.py
gitlab/: Readme.md  cli.py  configuration.yml  lock_migrated_phabricator_tasks.py  manage_projects.py  (+3 more)
(+536 files in other folders)
