[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swh-grafana-cli"
version = "0.1.0"
description = "Basic grafana script to add annotations"
requires-python = ">=3.11"
dependencies = [
    "Click",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "pdbpp",
    "ipython"
]
